fix: bi icon not correctly aligned

--- a/packages/client/src/app.css
+++ b/packages/client/src/app.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+i[class^='bi-']::before,
+i[class*=' bi-']::before {
+	line-height: 1.2 !important;
+}
